--- a/frontend/src/blocks/profile/__add-button/profile__add-button.css
+++ b/frontend/src/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,7 @@
   background-image: url(../../../images/plus.svg);
   background-repeat: no-repeat;
   background-position: center;
+  transition: visibility 1s, opacity 0.5s ease-out;
 }
 
 .profile__add-button:hover {
