--- a/frontend/src/blocks/card/__delete-button/card__delete-button.css
+++ b/frontend/src/blocks/card/__delete-button/card__delete-button.css
@@ -11,6 +11,7 @@
   background-size: cover;
   background-position: center;
   cursor: pointer;
+  transition: visibility 1s, opacity 0.5s ease-out;
 }
 
 .card__delete-button:hover {
