--- a/frontend/src/blocks/card/__image/card__image.css
+++ b/frontend/src/blocks/card/__image/card__image.css
@@ -3,5 +3,9 @@
   height: 282px;
   object-fit: cover;
   cursor: pointer;
+  transition: transform 1.5s ease-out;
 }
 
+.card__image:hover {
+  transform: scale(1.05);
+}
