--- a/frontend/src/blocks/popup/__close-button/popup__close-button.css
+++ b/frontend/src/blocks/popup/__close-button/popup__close-button.css
@@ -11,6 +11,7 @@
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
   z-index: 3;
+  transition: visibility 1s, opacity 0.5s ease-out;
 }
 
 .popup__close-button:hover {
