--- a/frontend/src/blocks/popup/__submit-button/popup__submit-button.css
+++ b/frontend/src/blocks/popup/__submit-button/popup__submit-button.css
@@ -10,6 +10,7 @@
   font-weight: 400;
   line-height: 22px;
   cursor: pointer;
+  transition: visibility 1s, opacity 0.5s ease-out;
 }
 
 .popup__submit-button:hover {
