--- a/frontend/src/blocks/profile/__edit-avatar/profile__edit-avatar.css
+++ b/frontend/src/blocks/profile/__edit-avatar/profile__edit-avatar.css
@@ -9,6 +9,7 @@
   position: absolute;
   padding: 0;
   transition: visibility 1s, opacity 0.5s ease-out;
+  cursor: pointer;
 }
 
 @media(max-width: 700px) {
