--- a/frontend/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/frontend/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,6 +12,7 @@
   background-image: url(../../../images/edit.svg);
   background-position: center;
   background-repeat: no-repeat;
+  transition: visibility 1s, opacity 0.5s ease-out;
 }
 
 .profile__edit-button:hover {
