--- a/frontend/src/blocks/sign-form/__submit/sign-form__submit.css
+++ b/frontend/src/blocks/sign-form/__submit/sign-form__submit.css
@@ -8,4 +8,10 @@
   border-radius: 2px;
   border: none;
   background-color: #fff;
+  cursor: pointer;
+  transition: visibility 1s, opacity 0.5s ease-out;
+}
+
+.sign-form__submit:hover {
+  opacity: 0.8;
 }
